syntax = "proto3";

package validation;

option go_package = ".";

import "google/protobuf/timestamp.proto";

message ValidateRegistrationRequest {
  string email = 1;
  string password = 2;
  string password_confirm = 3;
  int32 sex = 4;
  google.protobuf.Timestamp bitrhdate = 5;
}

message ErrorMessage {
  string code = 1;
  string error = 2;
}

message ValidationResponse {
  bool success = 1;
  repeated ErrorMessage errors = 2;
}

service Validation {
  rpc ValidateRegistration(ValidateRegistrationRequest) returns (ValidationResponse);
}
